@@ -32,6 +32,8 @@ Bugfix
   SNMPUserNameTrap parameter. Did not affect flat file config. (closes #853)
 - Fixed missing library requirement when using PacketFence with routed VLANs
   (closes #838)
+- Database schema updated for our backup script in addons/ (closes #800)
+- Backup script keeps more location history by default
 - Removed some unnecessary warnings (closes #850, #862)
 
 --------------------------------------------------------------------------------
